started topic modeling.

--- a/Final_Project_trial_1.ipynb
+++ b/Final_Project_trial_1.ipynb
@@ -65951,9 +65951,7 @@
     "coordinates = df1_us.as_matrix([\"latitude\", \"longitude \"])\n",
     "x, clusters = kmeans2(whiten(coordinates), 150) \n",
     "plt.scatter(coordinates[:,0], coordinates[:,1], c=clusters);\n",
-    "plt.show()\n",
-    "for i in range(len(clusters)):\n",
-    "    print(coordinates[i], clusters[i])"
+    "plt.show()"
    ]
   },
   {
@@ -66111,8 +66109,7 @@
     }
    ],
    "source": [
-    "df1_us = df1_us.reset_index(drop=True)\n",
-    "df1_us.head()"
+    "df1_us = df1_us.reset_index(drop=True)"
    ]
   },
   {
@@ -66142,11 +66139,8 @@
     }
    ],
    "source": [
-    "print(len(clusters), df1_us['latitude'].count())\n",
     "for i in range(len(clusters)):\n",
     "    df1_us.at[i, 'cluster'] = clusters[i]\n",
-    "print(len(clusters), df1_us['latitude'].count())\n",
-    "\n",
     "plt.scatter(df1_us['latitude'], df1_us['longitude '], c=df1_us['cluster']);\n",
     "plt.show()"
    ]
@@ -66799,7 +66793,7 @@
    ],
    "source": [
     "df1_us_sorted = df1_us.sort_values(['cluster', 'datetime'], ascending=[True, True])\n",
-    "df1_us_sorted.head(20)"
+    "df1_us_sorted.head()"
    ]
   },
   {
@@ -67806,7 +67800,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
